--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -520,34 +520,34 @@
         // Quiz Data
         const quizData = {
             general: [
-                { question: "What is the capital of Nepal?", answer: "Kathmandu" },
-                { question: "Which is the highest mountain in the world?", answer: "Mount Everest" },
-                { question: "What is the chemical symbol for gold?", answer: "Au" },
-                { question: "Who wrote 'Romeo and Juliet'?", answer: "William Shakespeare" },
-                { question: "What is the largest planet in our solar system?", answer: "Jupiter" },
-                { question: "Which country is known as the Land of the Rising Sun?", answer: "Japan" },
-                { question: "What is the main component of the sun?", answer: "Hydrogen" },
-                { question: "Who painted the Mona Lisa?", answer: "Leonardo da Vinci" },
-                { question: "What is the hardest natural substance on Earth?", answer: "Diamond" },
-                { question: "Which gas is most abundant in Earth's atmosphere?", answer: "Nitrogen" },
-                { question: "What is the currency of Japan?", answer: "Yen" },
-                { question: "Who discovered gravity?", answer: "Isaac Newton" },
-                { question: "What is the largest ocean on Earth?", answer: "Pacific Ocean" },
-                { question: "Which animal is known as the 'Ship of the Desert'?", answer: "Camel" },
-                { question: "What is the national flower of Nepal?", answer: "Rhododendron" },
-                { question: "Which planet is known as the Red Planet?", answer: "Mars" },
-                { question: "What is the largest mammal in the world?", answer: "Blue Whale" },
-                { question: "Who was the first person to walk on the moon?", answer: "Neil Armstrong" },
-                { question: "What is the boiling point of water in Celsius?", answer: "100°C" },
-                { question: "Which country is home to the kangaroo?", answer: "Australia" },
-                { question: "What is the longest river in the world?", answer: "Nile" },
-                { question: "Who is known as the father of computers?", answer: "Charles Babbage" },
-                { question: "What is the largest continent by area?", answer: "Asia" },
-                { question: "Which gas do plants absorb from the atmosphere?", answer: "Carbon dioxide" },
-                { question: "What is the smallest prime number?", answer: "2" },
-                { question: "Who wrote 'The Art of War'?", answer: "Sun Tzu" },
-                { question: "What is the chemical formula for water?", answer: "H₂O" },
-                { question: "Which country hosted the 2020 Summer Olympics?", answer: "Japan" }
+                { question: "कितावको अगाडि र पछाडि राखिएको खालि पानालाई के भनिन्छ?", answer: "FLY LEAF" },
+                { question: "जिरो (०) अंकका आविस्कारक को हुन्? ", answer: "आर्य भट्ट" },
+                { question: "सेतो सुन भन्नाले केलाई बुझिन्छ?", answer: "कपास" },
+                { question: "ANFA को पूरा रुप के हो?", answer: "All Nepal Football Association" },
+                { question: "यसवर्ष कुन नेपाली चलचित्रले सर्वश्रेष्ठ राष्ट्रिय चलचित्र अवार्ड प्राप्त गर्यो?", answer: "बुलाकी" },
+                { question: "विश्व सम्पदा सूचिमा नेपालका कति सम्पदाहरु सूचिकृत छन्?", answer: "१०" },
+                { question: "त्रिभुवन विश्वविद्यालयको स्थापनाको घोषणा कहिले भयो साल भन्नुहोस्?", answer: "२०१२ चैत्र १८" },
+                { question: "लुम्बिनीको असोक स्तम्भमा कुन भाषाको प्रयोग गरिएको छ? ", answer: "पाली },
+                { question: "नेपालमा सरकारी कार्यालयको समय १० बजे देखि ४ बजे सम्म कुन रााण प्रधानमन्त्रीले तोकेका थिए ?", answer: "भिम शमशेर" },
+                { question: "'LET'S VISIT NEPAL' कितावका लेखकको नाम भन्नुहोस्।", answer: "आङ साङ सु की" },
+                { question: "सर्वप्रथम मूल्य अभिवृद्धि कर (VAT) कुन देशमा लागू भएको थियो ", answer: "फ्रान्स" },
+                { question: "काठमाण्डौ उपत्यकामा विद्युतिय वस सेवाको शुरुवात कहिलेदेखि भएको हो?", answer: "२०७६ भदौ २४" },
+                { question: "नेपालले ओलम्पिकमा सर्बप्रथम कहिले सहभागीता जनायो?", answer: "सन् १९६४" },
+                { question: "IPL 2025 को विजेता टिम कुन हो?", answer: "Royal Challenger Bengaluru (RCB)" },
+                { question: "कुन चीज दिनमा एकचोटि आउँछ, तर कहिल्यै रातमा आउँदैन?", answer: "अक्षर ‘D’" },
+                { question: "हालका अमेरिकाका राष्ट्रपतिको पुरा नाम भन्नुहोस्।", answer: "डोनाल्ड ट्रम्प" },
+                { question: "लगातार ४ वर्षमा कति दिन हुन्छ?", answer: "१४६१" },
+                { question: "म 3 अंकको संख्या हुँ। म 3 बाट भाग लगाउँदा 1 बाँकी आउँछ, 5 बाट भाग लगाउँदा 1 बाँकी आउँछ, 7 बाट भाग लगाउँदा 1 बाँकी आउँछ — म को हुँ?", answer: "106" },
+                { question: "What word is spelled incorrectly in every single dictionary?", answer: "INCORRECTLY" },
+                { question: "मानव शरीरमा सबैभन्दा ठूलो अंग कुन हो?", answer: "छाला" },
+                { question: "म जुनसुकै ठाउँमा जान सक्छु, तर आफैं कहिल्यै हिँड्दिन — म के हुँ?", answer: "रास्ता / बाटो" },
+                { question: "सन् १९४५ मा दोस्रो विश्वयुद्ध समाप्त हुँदा जापानमा परमाणु बम खसालिएको सहरहरू कुन-कुन हुन्?", answer: "हिरोशिमा र नागासाकी" },
+                { question: "सन् २०२२ मा विश्वकप फुटबल कुन देशले जितेको हो?", answer: "अर्जेन्टिना" },
+                { question: "नेपालको पहिलो महिला प्रधानन्यायाधीश को थिइन्?", answer: "सुषिला कार्की" },
+                { question: "विश्व स्वास्थ्य संगठन (WHO) को मुख्यालय कहाँ छ?", answer: "जेनेभा, स्विट्जरल्यान्ड" },
+                { question: "नेपालको राष्ट्रिय जनगणना प्रत्येक कति वर्षमा गरिन्छ?", answer: "१० वर्षमा" },
+                { question: "नेपालका कुन Genius बालकले ५ बर्षकै उमेरमा ८ भाषामा कुराकानी गर्न सक्ने प्रतिभा देखाएका छन्?", answer: "अरुण महर्जन" },
+                { question: "कुन प्राणी बिहान चार खुट्टामा, दिउँसो दुई खुट्टामा, बेलुका तीन खुट्टामा हिँड्छ?", answer: "मानव (बाल्यकाल, युवा, वृद्ध)" },
             ],
             audioVisual: [
                 { question: "Play the national anthem of Nepal. What is its name?", answer: "Sayaun Thunga Phulka" },
