--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -547,7 +547,7 @@
                 { question: "विश्व स्वास्थ्य संगठन (WHO) को मुख्यालय कहाँ छ?", answer: "जेनेभा, स्विट्जरल्यान्ड" },
                 { question: "नेपालको राष्ट्रिय जनगणना प्रत्येक कति वर्षमा गरिन्छ?", answer: "१० वर्षमा" },
                 { question: "नेपालका कुन Genius बालकले ५ बर्षकै उमेरमा ८ भाषामा कुराकानी गर्न सक्ने प्रतिभा देखाएका छन्?", answer: "अरुण महर्जन" },
-                { question: "कुन प्राणी बिहान चार खुट्टामा, दिउँसो दुई खुट्टामा, बेलुका तीन खुट्टामा हिँड्छ?", answer: "मानव (बाल्यकाल, युवा, वृद्ध)" },
+                { question: "कुन प्राणी बिहान चार खुट्टामा, दिउँसो दुई खुट्टामा, बेलुका तीन खुट्टामा हिँड्छ?", answer: "मानव (बाल्यकाल, युवा, वृद्ध)" }
             ],
             audioVisual: [
                 { question: "Play the national anthem of Nepal. What is its name?", answer: "Sayaun Thunga Phulka" },
@@ -562,38 +562,40 @@
             rapidFire: [
                 {
                     questions: [
-                        { question: "Name three countries that border Nepal.", answer: "India, China, (Bhutan is disputed)" },
-                        { question: "What is the capital of Nepal?", answer: "Kathmandu" },
-                        { question: "Name the highest mountain in Nepal.", answer: "Mount Everest" },
-                        { question: "What is Nepal's national flower?", answer: "Rhododendron" },
-                        { question: "Name Nepal's national animal.", answer: "Cow" }
+                        { question: "मानव शरीरमा कति जोरा क्रोमोजोम हुन्छन्?", answer: "२३ जोरा" },
+                        { question: "विश्वको सबैभन्दा ठूलो महासागर कुन हो?", answer: "प्रशान्त महासागर" },
+                        { question: "सूर्य कुन ग्याँसबाट बनेको छ?", answer: "हाइड्रोजन" },
+                        { question: "नेपालको राष्ट्रिय जनावर के हो?", answer: "गाई" },
+                        { question: "दूध कुन भिटामिनको राम्रो स्रोत हो?", answer: "भिटामिन D" }
                     ]
                 },
                 {
                     questions: [
-                        { question: "List the last three prime ministers of Nepal.", answer: "Depends on current date" },
-                        { question: "What is Nepal's currency?", answer: "Nepalese Rupee" },
-                        { question: "Name Nepal's national bird.", answer: "Himalayan Monal" },
-                        { question: "What is Nepal's time zone?", answer: "NPT (UTC+05:45)" },
-                        { question: "Name Nepal's longest river.", answer: "Karnali" }
+                        { question: "कुन जीवको रगत निलो हुन्छ?", answer: "ऑक्टोपस" },
+                        { question: "संसारको सबैभन्दा अग्लो भवन कुन हो?", answer: "बुर्ज खलिफा" },
+                        { question: "नेपालको राष्ट्रिय गीत को लेखेका हुन्?", answer: "व्याकुल माइला" },
+                        { question: "एक दर्जनमा कति वटा हुन्छ?", answer: "१२" },
+                        { question: "ओलम्पिकको चिन्हमा कति रिङ हुन्छन्?", answer: "५" }
                     ]
                 },
                 {
                     questions: [
-                        { question: "Name five districts of Lumbini Province.", answer: "Rupandehi, Kapilvastu, Palpa, Arghakhanchi, Gulmi, etc." },
-                        { question: "What is the population of Nepal?", answer: "Approx. 30 million" },
-                        { question: "Name Nepal's largest lake.", answer: "Rara Lake" },
-                        { question: "What is Nepal's area in sq km?", answer: "147,516 sq km" },
-                        { question: "Name Nepal's first king.", answer: "Prithvi Narayan Shah" }
+                       { question: "मानव शरीरमा कति हड्डी हुन्छन्?", answer: "२०६" },
+                    { question: "नेपालको राष्ट्रिय फूल के हो?", answer: "लालिगुराँस" },
+                    { question: "विश्वको सबैभन्दा अग्लो हिमाल कुन हो?", answer: "सगरमाथा" },
+                    { question: "१२ वटा अण्डा ६ जनाले बराबर बाँडे भने प्रत्येकले कति पाउँछ?", answer: "२" },
+                    { question: "नेपालको पहिलो राष्ट्रपति को हुन्?", answer: "रामवरण यादव" },
+
                     ]
                 },
                 {
                     questions: [
-                        { question: "Name four UNESCO World Heritage Sites in Nepal.", answer: "Pashupatinath, Boudhanath, Swayambhunath, Changu Narayan, Lumbini, etc." },
-                        { question: "What is Nepal's literacy rate?", answer: "Around 67%" },
-                        { question: "Name Nepal's largest national park.", answer: "Chitwan National Park" },
-                        { question: "What is Nepal's main export?", answer: "Carpets and textiles" },
-                        { question: "Name Nepal's longest highway.", answer: "Mahendra Highway" }
+                        { question: "π को अनुमानित मान कति हो?", answer: "३.१४" },
+                        { question: "कुन जीवको ३ मुटु हुन्छ?", answer: "ऑक्टोपस" },
+                        { question: "१२५ को घनमूल (cube root) कति?", answer: "५" },
+                        { question: "हातमा कति औंलाहरू हुन्छन्?", answer: "५" },
+                        { question: "गणितको भाषा कुन देशबाट सुरु भएको थियो?", answer: "ग्रीस" },
+
                     ]
                 }
             ]
