--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -527,7 +527,7 @@
                 { question: "यसवर्ष कुन नेपाली चलचित्रले सर्वश्रेष्ठ राष्ट्रिय चलचित्र अवार्ड प्राप्त गर्यो?", answer: "बुलाकी" },
                 { question: "विश्व सम्पदा सूचिमा नेपालका कति सम्पदाहरु सूचिकृत छन्?", answer: "१०" },
                 { question: "त्रिभुवन विश्वविद्यालयको स्थापनाको घोषणा कहिले भयो साल भन्नुहोस्?", answer: "२०१२ चैत्र १८" },
-                { question: "लुम्बिनीको असोक स्तम्भमा कुन भाषाको प्रयोग गरिएको छ? ", answer: "पाली },
+                { question: "लुम्बिनीको असोक स्तम्भमा कुन भाषाको प्रयोग गरिएको छ? ", answer: "पाली" },
                 { question: "नेपालमा सरकारी कार्यालयको समय १० बजे देखि ४ बजे सम्म कुन रााण प्रधानमन्त्रीले तोकेका थिए ?", answer: "भिम शमशेर" },
                 { question: "'LET'S VISIT NEPAL' कितावका लेखकको नाम भन्नुहोस्।", answer: "आङ साङ सु की" },
                 { question: "सर्वप्रथम मूल्य अभिवृद्धि कर (VAT) कुन देशमा लागू भएको थियो ", answer: "फ्रान्स" },
