--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -381,9 +381,9 @@
         <div class="absolute inset-0 rounded-xl border-4 border-transparent animate-border-glow pointer-events-none"></div>
         <!-- Header Section -->
         <header class="glass-panel mb-6 p-6 text-center">
-            <h1 class="text-4xl md:text-5xl font-bold text-white mb-2 font-display">Interhouse Quiz Contest</h1>
-            <p class="text-xl text-indigo-200">Shree Tikuligadh Secondary School</p>
-            <p class="text-sm text-gray-400 mt-1">Tilottama-14, Rupandehi (ESTD. 2018)</p>
+            <h1 class="text-4xl md:text-5xl font-bold text-white mb-2 font-display">SHREE TIKULIGADH SECONDARY SCHOOL</h1>
+            <p class="text-xl text-indigo-200">Interhouse Quiz Contest</p>
+            <p class="text-sm text-gray-400 mt-1">Tilottama-14, Rupandehi (Estd. 2018)</p>
         </header>
 
         <!-- Main layout with timer at top-right -->
@@ -396,7 +396,7 @@
                         <h2 class="section-title text-lg mb-4">Select Round</h2>
                         <div class="flex flex-wrap gap-2 mb-6">
                             <button id="round-general" class="btn bg-blue-600/50 hover:bg-blue-600 text-white px-4 py-2 rounded-lg active:scale-95 transition-all">
-                                General Round
+                                The General Round
                             </button>
                             <button id="round-audio" class="btn bg-purple-600/50 hover:bg-purple-600 text-white px-4 py-2 rounded-lg active:scale-95 transition-all">
                                 Audio-Visual Round
@@ -419,8 +419,8 @@
                         <div class="bg-indigo-900/30 p-6 rounded-full mb-6">
                             <i class="fas fa-trophy text-4xl text-yellow-400"></i>
                         </div>
-                        <h2 class="text-4xl font-bold text-white mb-4">Welcome to Interhouse Quiz</h2>
-                        <p class="text-gray-300 text-xl mb-6 max-w-md">Test your knowledge across multiple rounds. Select a round and question number to begin!</p>
+                        <h2 class="text-4xl font-bold text-white mb-4">Welcome to The Friday's Program -Interhouse Quiz</h2>
+                        <p class="text-gray-300 text-xl mb-6 max-w-md">The stage is set for an exciting journey across three thrilling rounds — General, Audio-Visual, and Rapid Fire. Select a question number to begin!</p>
                         
                         <div class="flex space-x-2">
                             <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce" style="animation-delay: 0s"></div>
