--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -382,7 +382,7 @@
         <!-- Header Section -->
         <header class="glass-panel mb-6 p-6 text-center">
             <h1 class="text-4xl md:text-5xl font-bold text-white mb-2 font-display">SHREE TIKULIGADH SECONDARY SCHOOL</h1>
-            <p class="text-xl text-indigo-200">Interhouse Quiz Contest</p>
+            <p class="text-xl text-indigo-200">Interhouse Quiz Contest (9-12)</p>
             <p class="text-sm text-gray-400 mt-1">Tilottama-14, Rupandehi (Estd. 2018)</p>
         </header>
 
