--- a/quiz6to8.html
+++ b/quiz6to8.html
@@ -521,9 +521,9 @@
         const quizData = {
             general: [
                 { question: "What is the minimum age for voting in Nepal?", answer: "18 yrs" },
-                { question: "What is the largest organ in the human body? ", answer: "Skin" },
+                { question: "What is the largest organ in the human body?", answer: "Skin" },
                 { question: "Which vitamin is provided by sunlight?", answer: "Vitamin D" },
-                { question: "What is the process of changing water into vapor called??", answer: "Evaporation" },
+                { question: "What is the process of changing water into vapor called?", answer: "Evaporation" },
                 { question: "If a clock shows 3:00, what is the angle between the hour and minute hand?", answer: "90" },
                 { question: "I am an odd number. Take away one letter, and I become even. What number am I?", answer: "23" },
                 { question: "Who was the first king of unified Nepal?", answer: "Prithivi Narayan Shah" },
@@ -534,7 +534,7 @@
                 { question: "What is the longest river in the world?", answer: "Nile" },
                 { question: "Who was the first man to walk on the moon?", answer: "Neil Armstrong" },
                 { question: "If you multiply this number by any other number, the answer will always be the same. Which number is it?", answer: "Zero" },
-                { question: "Which country has won the most FIFA World Cups?", answer: "Brazil’" },
+                { question: "Which country has won the most FIFA World Cups?", answer: "Brazil" },
                 { question: "Which Nepali girl set the Guinness World Record for the longest dance marathon of 126 hours?", answer: "Bandana Nepal" },
                 { question: "In which city of India did the massive plane crash over the Medical Boys Hostel recently that took the life of more than 241 people?", answer: "Ahmdabad" },
                 { question: "What has hands but can’t clap?", answer: "A Clock" },
@@ -547,7 +547,7 @@
                 { question: "What is the fullform of WHO?", answer: "World Health Organation" },
                 { question: "The sum of all two digit number is:?", answer: "4905" },
                 { question: "What does “GPT” stand for in ChatGPT?", answer: "Generative Pre-trained Transformer" },
-                { question: "What was the last word of the pilot in the recent Ahmedabad plane crash?", answer: "MAYDAY!!" }
+                { question: "What was the last word of the pilot in the recent Ahmedabad plane crash?", answer: "MAYDAY" }
             ],
             audioVisual: [
                 { question: "Play the national anthem of Nepal. What is its name?", answer: "Sayaun Thunga Phulka" },
