--- a/quiz6to8.html
+++ b/quiz6to8.html
@@ -540,7 +540,7 @@
                 { question: "What has hands but can’t clap?", answer: "A Clock" },
                 { question: "What word is spelled incorrectly in every single dictionary?", answer: "INCORRECTLY" },
                 { question: "Which two IPL teams have won the most IPL titles?", answer: "Mumbai Indians & Chennai Super Kings" },
-                { question: "Who is the founder of biggest social media giant "Facebook?", answer: "Mark Zuckerberg" },
+                { question: "Who is the founder of biggest social media giant 'Facebook?'", answer: "Mark Zuckerberg" },
                 { question: "Which is the only cricketer of nepal who played the IPL?", answer: "Sandip Lamichhane" },
                 { question: "When is National Paddy Day celebrated in Nepal?", answer: "Asar 15" },
                 { question: "Who is known as 'Captain Cool' in Indian cricket?", answer: "MS Dhoni" },
