--- a/quiz3to5.html
+++ b/quiz3to5.html
@@ -565,21 +565,22 @@
             rapidFire: [
                 {
                     questions: [
-                  { question: "Which flower is known as the King of Flowers?", answer: "Rose" },
-                  { question: "What do you call a baby dog?", answer: "Puppy" },
-                    { question: "How many wheels does a bicycle have?", answer: "2" },
-                   { question: "Which season comes after winter?", answer: "Spring" },
-                   { question: "What is the color of grass?", answer: "Green" }    
+  { question: "Which is the longest river in the world?", answer: "Nile" },
+  { question: "What is 100 ÷ 5?", answer: "20" },
+  { question: "What do you call a shape with 5 sides?", answer: "Pentagon" },
+{ question: "How many months have 29 days?", answer: "12/All" },
+  { question: "Which is the national bird of Nepal?", answer: "Danphe" }
+   
                     ]
                 },
                 {
                     questions: [
-{ question: "What is the chemical symbol for Gold?", answer: "Au" },
-  { question: "Name the largest two digits number.", answer: "99" },
-  { question: "How many players are there in a basketball team on the court?", answer: "5" },
-  { question: "What is the hardest natural substance on Earth?", answer: "Diamond" },
-  { question: "Which organ pumps blood through the body?", answer: "Heart" }
-                    ]
+  { question: "Who is known as the Father of Computers?", answer: "Charles Babbage" },
+  { question: "What has a face and hands but no arms or legs?", answer: "Clock" },
+  { question: "Which animal says 'Meow'?", answer: "Cat" },
+  { question: "What is the value of 9 × 9?", answer: "81" },
+  { question: "Which planet is farthest from the Sun?", answer: "Neptune" }
+   ]
                 },
                 {
                     questions: [
@@ -592,12 +593,13 @@
                 },
                 {
                     questions: [
-                       { question: "What do you call water when it falls from clouds?", answer: "Rain" },
-  { question: "Which bird is known for mimicking human speech?", answer: "Parrot" },
-  { question: "What is 10 minus 4?", answer: "6" },
-  { question: "How many legs does a spider have?", answer: "8" },
-  { question: "Which festival is celebrated with colors in Nepal and India?", answer: "Holi" }
-                    ]
+  { question: "What is the color of the sky?", answer: "Blue" },
+  { question: "कागको रङ के हो?", answer: "कालो" },
+  { question: "How many fingers do we have in total?", answer: "10" },
+  { question: "कुन फलको बाहिर कडा हुन्छ र भित्र पानी हुन्छ?", answer: "नारिवल" },
+  { question: "What is 2 + 2?", answer: "4" }
+]
+
                 }
             ]
         };
