--- a/quiz-draft.html
+++ b/quiz-draft.html
@@ -420,8 +420,12 @@
                             <i class="fas fa-trophy text-4xl text-yellow-400"></i>
                         </div>
                         <h2 class="text-4xl font-bold text-white mb-4">Welcome to The Friday's Program -Interhouse Quiz</h2>
-                        <p class="text-gray-300 text-xl mb-6 max-w-md">The stage is set for an exciting journey across three thrilling rounds — General, Audio-Visual, and Rapid Fire. Select a question number to begin!</p>
-                        
+                        <p class="text-gray-300 text-xl mb-6 max-w-md"><br><b>📋 BASIC RULES:</b><br>
+
+                            <b>🏆 House Points:</b> Each correct answer adds 5 points to your house total.<br>
+                            <b>⏱ Time Limit:</b> You’ll have a limited time to answer each question.<br>
+                           <b>🔄 Rounds:</b> There are 3 different rounds. Each rounds has new formats of questions. 
+                        </p> 
                         <div class="flex space-x-2">
                             <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce" style="animation-delay: 0s"></div>
                             <div class="w-3 h-3 bg-green-500 rounded-full animate-bounce" style="animation-delay: 0.2s"></div>
